@@ -1,3 +1,5 @@
+    ADDED: GUI for configuring the atomic extensions in Konfigurator
+
     FIXED: Autoconfigure doesn't tell that packing is enabled by 7z
     FIXED: Problem with unpacking passworded ZIP files
     FIXED: Compile problem with automake-1.10 (thanks to Sausi at the forums)
